mejora visual index.html

--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <!doctype html>
 <html lang="es" translate="no">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="google" content="notranslate">
-    <meta http-equiv="Content-Language" content="es">
-    <link rel="icon" type="image/svg+xml" href="/assets/icons/logo-tiktuy.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TIKTUY</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="google" content="notranslate">
+  <meta http-equiv="Content-Language" content="es">
+  <link rel="icon" type="image/svg+xml" href="/assets/icons/logo-tiktuy.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TIKTUY</title>
+  <meta name="description"
+    content="TIKTUY: Es un Software todo en uno para ecommerce, couriers y repartidores. Gestiona pedidos, asigna envíos y supervisa tu operación logística en una sola plataforma." />
+  <meta name="keywords"
+    content="TIKTUY, comercio electrónico, tiendas en línea, comercio electrónico, tiendas en línea, software de comercio electrónico" />
+  <meta name="author" content="TIKTUY" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://tiktuy.lat/" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
