--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="Content-Language" content="es">
   <link rel="icon" type="image/svg+xml" href="/assets/icons/logo-tiktuy.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="google-site-verification" content="nKRZ9eRo0X4OeuCUEzuAimFG4PL2gxKCeOAuc3IX3Xo" />
   <title>TIKTUY</title>
   <meta name="description"
     content="TIKTUY: Es un Software todo en uno para ecommerce, couriers y repartidores. Gestiona pedidos, asigna envíos y supervisa tu operación logística en una sola plataforma." />
