feat: Add Open Graph and Twitter meta tags for improved social media sharing.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,21 @@
   <meta name="author" content="TIKTUY" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://tiktuy.lat/" />
+  <!-- Open Graph / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tiktuy.lat/" />
+  <meta property="og:title" content="TIKTUY - Plataforma de Logística y Ecommerce" />
+  <meta property="og:description"
+    content="Software todo en uno para ecommerce, couriers y repartidores. Gestiona pedidos y logística en un solo lugar." />
+  <meta property="og:image" content="https://tiktuy.lat/assets/icons/logo-tiktuy.svg" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://tiktuy.lat/" />
+  <meta property="twitter:title" content="TIKTUY - Plataforma de Logística y Ecommerce" />
+  <meta property="twitter:description"
+    content="Software todo en uno para ecommerce, couriers y repartidores. Gestiona pedidos y logística en un solo lugar." />
+  <meta property="twitter:image" content="https://tiktuy.lat/assets/icons/logo-tiktuy.svg" />
 </head>
 
 <body>
