--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="google" content="notranslate">
   <meta http-equiv="Content-Language" content="es">
-  <link rel="icon" type="image/svg+xml" href="/assets/icons/logo-tiktuy.svg" />
+  <link rel="icon" type="image/svg+xml" href="/assets/images/logo-tiktuy.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="nKRZ9eRo0X4OeuCUEzuAimFG4PL2gxKCeOAuc3IX3Xo" />
   <title>TIKTUY</title>
