--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <link rel="icon" type="image/svg+xml" href="/assets/images/logo-tiktuy.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="nKRZ9eRo0X4OeuCUEzuAimFG4PL2gxKCeOAuc3IX3Xo" />
+  <meta http-equiv="Content-Security-Policy" content="
+  default-src 'self';
+  img-src 'self' data: https:;
+  script-src 'self' 'unsafe-inline';
+  style-src 'self' 'unsafe-inline';
+  font-src 'self' data: https:;
+  connect-src 'self' %VITE_API_URL% https:;
+" />
+
   <title>TIKTUY</title>
   <meta name="description"
     content="TIKTUY: Es un Software todo en uno para ecommerce, couriers y repartidores. Gestiona pedidos, asigna envíos y supervisa tu operación logística en una sola plataforma." />
