--- a/index.html
+++ b/index.html
@@ -8,14 +8,45 @@
   <link rel="icon" type="image/svg+xml" href="/assets/images/logo-tiktuy.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="nKRZ9eRo0X4OeuCUEzuAimFG4PL2gxKCeOAuc3IX3Xo" />
-  <meta http-equiv="Content-Security-Policy" content="
-  default-src 'self';
-  img-src 'self' data: https:;
-  script-src 'self' 'unsafe-inline';
-  style-src 'self' 'unsafe-inline';
-  font-src 'self' data: https:;
-  connect-src 'self' %VITE_API_URL% https:;
-" />
+<meta
+  http-equiv="Content-Security-Policy"
+  content="
+    default-src 'self';
+
+    script-src
+      'self'
+      'unsafe-inline';
+
+    style-src
+      'self'
+      'unsafe-inline'
+      https://fonts.googleapis.com;
+
+    style-src-elem
+      'self'
+      'unsafe-inline'
+      https://fonts.googleapis.com;
+
+    font-src
+      'self'
+      data:
+      https://fonts.gstatic.com;
+
+    img-src
+      'self'
+      data:
+      https:;
+
+    connect-src
+      'self'
+      %VITE_API_URL%
+      https://www.tiktuy.lat
+      wss://www.tiktuy.lat
+      wss://tiktuy-app-backend-production.up.railway.app
+      https:;
+  "
+/>
+
 
   <title>TIKTUY</title>
   <meta name="description"
