--- a/index.html
+++ b/index.html
@@ -5,12 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="google" content="notranslate">
   <meta http-equiv="Content-Language" content="es">
-  <link rel="icon" type="image/svg+xml" href="/assets/images/logo-tiktuy.png" />
+  <link rel="icon" type="image/svg+xml" href="/logo_tiktuy.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="google-site-verification" content="nKRZ9eRo0X4OeuCUEzuAimFG4PL2gxKCeOAuc3IX3Xo" />
-<meta
-  http-equiv="Content-Security-Policy"
-  content="
+  <meta http-equiv="Content-Security-Policy" content="
     default-src 'self';
 
     script-src
@@ -44,8 +42,7 @@
       wss://www.tiktuy.lat
       wss://tiktuy-app-backend-production.up.railway.app
       https:;
-  "
-/>
+  " />
 
 
   <title>TIKTUY</title>
