fixed index html tags

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   <meta name="description"
     content="TIKTUY: Es un Software todo en uno para ecommerce, couriers y repartidores. Gestiona pedidos, asigna envíos y supervisa tu operación logística en una sola plataforma." />
   <meta name="keywords"
-    content="TIKTUY, comercio electrónico, tiendas en línea, comercio electrónico, tiendas en línea, software de comercio electrónico" />
+    content="TIKTUY, comercio electrónico, tiendas en línea, software de comercio electrónico, ecommerce, repartidor, motorizado, pedidos, fulfillment, logística, envíos, courier, sistema de gestión, tracking, última milla, app de entregas, control de flotas, gestión de rutas, delivery, envíos express, same day delivery, operador logístico, software logístico, rastreo de pedidos, prueba de entrega, POD, gestión de stock, inventario, dropshipping, logística inversa, transporte, distribución, supply chain, saas, plataforma logística, perú, latam" />
   <meta name="author" content="TIKTUY" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://tiktuy.lat/" />
@@ -68,6 +68,53 @@
   <meta property="twitter:description"
     content="Software todo en uno para ecommerce, couriers y repartidores. Gestiona pedidos y logística en un solo lugar." />
   <meta property="twitter:image" content="https://tiktuy.lat/assets/icons/logo-tiktuy.svg" />
+  <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "FAQPage",
+      "mainEntity": [{
+          "@type": "Question",
+          "name": "¿Qué es TIKTUY para Ecommerce?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "TIKTUY es el software ideal para tiendas en línea. Centraliza pedidos, gestiona envíos a contraentrega y conecta directamente con couriers y motorizados para optimizar tu logística."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "¿Cómo ayuda TIKTUY a los Couriers?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Permite recibir pedidos de múltiples ecommerce, organizar rutas de despacho, asignar repartidores y monitorear entregas en tiempo real con prueba de entrega digital."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "¿Qué función cumplen los Repartidores Motorizados en TIKTUY?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Los motorizados usan la app para recibir asignaciones, gestionar su ruta de entrega, contactar al cliente y subir evidencias de entrega (fotos y firma) al instante."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "¿TIKTUY ofrece servicio de Fulfillment?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Sí, TIKTUY facilita la gestión de inventarios y fulfillment, permitiendo un control preciso del stock y agilizando el proceso de empaquetado y envío."
+          }
+        },
+         {
+          "@type": "Question",
+          "name": "¿Puedo hacer seguimiento o Tracking de mis pedidos?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Absolutamente. TIKTUY ofrece tracking en tiempo real para ecommerce, couriers y clientes finales, asegurando transparencia en la última milla."
+          }
+        }
+      ]
+    }
+  </script>
 </head>
 
 <body>
