--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="es" translate="no">
 
 <head>
+  <!-- Google Tag Manager -->
+  <script>(function (w, d, s, l, i) {
+      w[l] = w[l] || []; w[l].push({
+        'gtm.start':
+          new Date().getTime(), event: 'gtm.js'
+      }); var f = d.getElementsByTagName(s)[0],
+        j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : ''; j.async = true; j.src =
+          'https://www.googletagmanager.com/gtm.js?id=' + i + dl; f.parentNode.insertBefore(j, f);
+    })(window, document, 'script', 'dataLayer', 'GTM-K8B8WN7M');</script>
+  <!-- End Google Tag Manager -->
   <meta charset="UTF-8" />
   <meta name="google" content="notranslate">
   <meta http-equiv="Content-Language" content="es">
@@ -13,7 +23,12 @@
 
     script-src
       'self'
-      'unsafe-inline';
+      'unsafe-inline'
+      https://www.googletagmanager.com;
+
+    frame-src
+      'self'
+      https://www.googletagmanager.com;
 
     style-src
       'self'
@@ -118,6 +133,10 @@
 </head>
 
 <body>
+  <!-- Google Tag Manager (noscript) -->
+  <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-K8B8WN7M" height="0" width="0"
+      style="display:none;visibility:hidden"></iframe></noscript>
+  <!-- End Google Tag Manager (noscript) -->
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
