--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 
   <title>TIKTUY</title>
   <meta name="description"
-    content="TIKTUY: Es un Software todo en uno para ecommerce, couriers y repartidores. Gestiona pedidos, asigna envíos y supervisa tu operación logística en una sola plataforma." />
+    content="Software todo en uno para ecommerce, couriers y repartidores. Gestiona pedidos, asigna envíos y controla tu logística en tiempo real con TIKTUY." />
   <meta name="keywords"
-    content="TIKTUY, comercio electrónico, tiendas en línea, software de comercio electrónico, ecommerce, repartidor, motorizado, pedidos, fulfillment, logística, envíos, courier, sistema de gestión, tracking, última milla, app de entregas, control de flotas, gestión de rutas, delivery, envíos express, same day delivery, operador logístico, software logístico, rastreo de pedidos, prueba de entrega, POD, gestión de stock, inventario, dropshipping, logística inversa, transporte, distribución, supply chain, saas, plataforma logística, perú, latam" />
+    content="TIKTUY, comercio electrónico, tiendas en línea, software de comercio electrónico, ecommerce, repartidor, motorizado, pedidos, fulfillment, logística, envíos, courier, sistema de gestión, tracking, última milla, app de entregas, control de flotas, gestión de rutas, delivery, envíos express, same day delivery, operador logístico, software logístico, rastreo de pedidos, prueba de entrega, POD, gestión de stock, inventario, dropshipping, logística inversa, transporte, distribución, supply chain, saas, plataforma logística, perú, latam, Arequipa" />
   <meta name="author" content="TIKTUY" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://tiktuy.lat/" />
